feat: add API auth, CORS, upload limits, canonical inspector, PDF viewer, and security fixes
Security:
- Add optional Firebase ID token verification for API (AKILI_REQUIRE_AUTH, FIREBASE_PROJECT_ID)
- Make CORS configurable via AKILI_CORS_ORIGINS for production
- Enforce max upload size for /ingest (AKILI_MAX_UPLOAD_BYTES, default 100MB)
- Remove Vite define that could bake Gemini/Google API key into frontend bundle
- Send Bearer token from frontend when user is signed in (authHeaders in api.ts)

Features:
- Canonical inspector in left sidebar: Units | Bijections | Grids tabs with GET /documents/{id}/canonical
- PDF viewer using pdfjs-dist: load PDF from API, render pages
- GET /documents/{id}/file: serve stored PDF; persist PDF to docs/ after ingest
- Proof overlay: ProofPoint now has page; "Show on document" scrolls to page and draws markers
- doc_id copy button in FileUploader after successful ingest

Fixes:
- Grid pin lookup: return pin name (same row, adjacent column) instead of pin number for "What is pin N?"

Backend: firebase-admin, auth.py, validate doc_id and store PDFs, ProofPoint.page.
Frontend: getCanonical, getDocumentFile, DocumentViewer with PDF.js and overlay, SidebarLeft canonical tabs, SidebarRight onShowProof, FileUploader copy.

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,15 @@ GOOGLE_API_KEY=your_key_here
 # Optional: set to 1 to include full error messages in API responses (e.g. ingest 500)
 # AKILI_DEBUG=1
 
+# Optional: require Firebase ID token for API (set 1 + FIREBASE_PROJECT_ID; needs GOOGLE_APPLICATION_CREDENTIALS or ADC).
+# AKILI_REQUIRE_AUTH=0
+
+# Optional: CORS origins (comma-separated). Default: localhost:3000,3001. For production add your frontend origin.
+# AKILI_CORS_ORIGINS=https://your-project.web.app
+
+# Optional: max upload size for PDF ingest in bytes (default 100MB).
+# AKILI_MAX_UPLOAD_BYTES=104857600
+
 # Firebase (for frontend login + analytics). Get from Firebase Console → Project settings → General.
 # Vite loads from repo root when you run npm run dev from frontend/ (see vite.config envDir).
 VITE_FIREBASE_API_KEY=
