--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "google-generativeai>=0.3",
     "pymupdf>=1.23",
     "pdf2image>=1.16",
+    "firebase-admin>=6.0",
 ]
 
 [project.optional-dependencies]
